<resources>
    <string name="app_name">Tripist</string>
    <string name="title_activity_museums">Map</string>
    <string name="title_activity_historical__places">Map</string>
    <string name="title_activity_parks">Map</string>
    <string name="title_activity_island__beachs">Map</string>
    <string name="title_activity_religions">Map</string>
    <string name="title_activity_bazaar__markets">Map</string>
    <string name="title_activity_my_locations">Map</string>
    <string name="title_activity_my_favourites">Map</string>
    <string name="title_activity_squares">Map</string>
    <string name="title_activity_my__locations">Map</string>
    <string name="title_activity_my__favourites">Map</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Homepage</string>
    <string name="title_myfavourites">My Favourites</string>
    <string name="title_mylocations">My Locations</string>
    <string name="title_settings">Settings</string>
    <string name="language">Language</string>
    <string name="application_language1">Türkçe</string>
    <string name="application_language2">English</string>
    <string name="application_usage">Application Usage</string>
    <string name="title_historical">"Historical" "\n" "Places"</string>
    <string name="title_museum">Museums</string>
    <string name="title_religions">Religions</string>
    <string name="title_parks">Parks</string>
    <string name="title_squares">Squares</string>
    <string name="title_markets">Bazaars</string>
    <string name="title_island">"Islands &amp;" "\n" "Beaches"</string>
    <string name="title_foods">Foods</string>
    <string name="first_slide_titel">Explore Istanbul</string>

    <!--Alert Button Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_name">Enter the new name</string>
    <string name="edit">Edit</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="dil_secenegi">Choose Language</string>

    <string name="update_toast">Successfully updated</string>
    <string name="blankname">Name can\'t be blank</string>
    <string name="saved_toast">The Location saved</string>
    <string name="add_cancel_toast">Adding location canceled</string>
    <string name="already_exist_toast">is already exist</string>
    <string name="addlocation_question">Do you want to save this place</string>
    <string name="myhome">My Home</string>
    <string name="myairport">My Airport</string>
    <string name="myhotel">My Hotel</string>
    <string name="others">Others</string>
    <string name="delete">Delete</string>
    <!--Onboarding -->
    <string name="second_slide_titel">Find Destination</string>
    <string name="third_slide_titel">Get Information</string>
    <string name="fourth_slide_titel">Add Favourite List</string>
    <string name="fifth_slide_titel">Get Suggestions</string>
    <string name="first_slide_desc">You can see the touristic places in Istanbul according to their categories.
        You can also discover the dishes that should be eaten in Istanbul.</string>
    <string name="second_slide_desc">You can find sightseeing places on the map, be directed to Google Maps
        to get directions and even add your special locations such as your hotel and your airport to the map.</string>
    <string name="third_slide_desc">You can get information about tha place you are interested in.
        Just click on the google icon for this.</string>
    <string name="fourth_slide_desc">You can collect a place you like or interest in a separate list by clicking the heart icon.
        So you can reach them faster.</string>
    <string name="fifth_slide_desc">You can get suggestions for events according to the weather of Istanbul.</string>

    <string name="next_btn">Next</string>
    <string name="skip">SKIP</string>
    <string name="lets_startes">Let\'s Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- notificaiton -->
    <string name="goodmorningnotification">Good morning. It is sunny today. How about having a nice Turkish breakfast on the breakfast street in Beşiktaş?</string>
    <string name="bosphorusnotification">Are you ready to enjoy the Bosphorus by inhaling the clean smell of the Bosphorus?
You can walk the Ortaköy-Kuruçeşme-Arnavutköy-Bebek-Rumeli Fortress line in 1 hour.</string>
    <string name="fishnotf">Do you want to eat fish and bread in Eminönü?</string>
    <string name="kumpirwafflenotf">After eating baked potatoes in Ortaköy, it might be a good idea to have waffles in Bebek.</string>
    <string name="bozanotf">Have you ever had boza before? How about you give it a try? It can be a good idea to drink boza in Vefa.</string>
    <string name="adalarnotf">Is not it nice weather to go to the islands and ride a bike?</string>
    <string name="bogazturunotf">Would not you like to enjoy the Istanbul Bosphorus with a fun ferry tour?
Do not forget to buy simit and throw it to the seagulls before you get on the ferry.</string>
    <string name="aksamnotf">You are not going to stay at home because it is evening?
How about watching the magnificent lights of Istanbul from a high hill and enjoying the view?
For example, Çamlıca or Pierre Loti Hill is a very nice place for this.</string>
    <string name="gecenotf">Is not it the time to have some fun? Europes most beautiful night clubs are waiting for you outside.</string>
    <string name="bescayınotf">There is nothing like going to Piyer Loti by the cable car and watching the view of the old Istanbul…
You can have your afternoon tea or evening coffee in the outdoor cafes built at the top. It is a great place to take photos, especially at sunset.</string>
    <string name="modasahilinotf">Moda beach is ideal for leisure time. In sunny weather you can buy a ice cream and walk along the beach, have a coffee or take a bike tour along the beach.</string>
    <string name="sabahmotf">If you want to start your day healthy, you can get out of bed a little early and go to Belgrade for morning exercise.</string>
    <string name="konsernotf">If you want to listen to some music and chill out, it might be a very good idea to go to a concert of your favorite style. Get your ticket and enjoy the fun</string>
    <string name="gezinotf">When the weather is sunny, take a walk from Karaköy. Photograph everything that could be an “Istanbul Classic” along the Galata bridge. When you are hungry, buy a Niğde Gazoz and simit or a delicious fish bread under the bridge… What more can you ask for!</string>
    <string name="oglennotf">Here is another Istanbul classic for you… Getting lost in the streets of Kuzguncuk is free! Walk, take pictures, check out the houses, cute little shops. When you are hungry, be sure to buy something from the historical bakery. You can even climb the long stairs of Kuzguncuk and eat your cookie against the Bosphorus view.</string>
    <string name="picnicnotf">Isn\'t it a great weather for a picnic? Moreover, what are you waiting for when there are very pleasant locations for picnics in Istanbul! You can also buy your picnic basket and visit the parks and forests of Istanbul with your loved ones; you can enjoy the warm weather.</string>
    <string name="bogaznotf">Another nice activity that can be done in hot weather in Istanbul is the Bosphorus tour. As the sun shows its face, the magnificent colors of the city emerge. You can witness these colors in their most beautiful form on the Bosphorus tour. For this, you can take tour boats departing from districts such as Beşiktaş, Ortaköy, Eminönü and enjoy the sea and the wind.</string>
    <string name="s_havanotf">The weather is a little bad ☹ But don\'t bother, because there are many places to visit in Istanbul even in bad weather. For example, it might be a good choice to glance at the museums category.</string>
    <string name="s_havanotf1">Are you one of those who can\'t stay home in rainy weather? Then let\'s put you in the parks category. You can go to the park of your choice and take a walk by absorbing that fragrance of the soil. Then who can say no to a warm coffee that will warm you up?</string>
    <string name="s_havanotf2">Sipping your saleb or Turkish coffee against the view of the Golden Horn in the historical Pierre Loti Coffee is also a good alternative to enjoy Istanbul in cold weather.</string>
    <string name="s_havanotf3">There are many great cafes where you can have fun with your loved ones in rainy weather. Especially those close to districts such as Cihangir, Karaköy, Moda can enjoy this pleasure without wasting time.</string>
    <string name="s_havanotf4">If you don\'t want to sit at home in cold weather and are tired of shopping centers, Grand Bazaar is the place for you. Get lost in its streets, discover its bedestens and inns. A unique journey into the back pages of history awaits you </string>
    <string name="s_havanotf5">After a romantic ferry trip, a nice walk along the tree-lined roads of Heybeliada can be a good choice.</string>
    <string name="s_havanotf6">Hot tea and a crispy bagel; or a nice coffee. In front of you is Istanbul\'s gray-hazy but uniquely beautiful strait. Even more than enough to get on the ferry and cross the street</string>
    <string name="s_havanotf7">Whether it is rain or mud, you can sit in a cozy cafe on İstiklal Caddesi, which is full of Beyoğlu lovers, and watch people with good music. I am sure you will enjoy it too.</string>
    <string name="s_havanotf8">The Bosphorus is the first destination that comes to mind when talking about raki and fish in Istanbul. It is useful to sit at the table before sunset to watch the city bathed in the rain.</string>
    <string name="no_internetconnection">You don\'t have an internet connection, but you can still benefit from Tripist. You can continue exploring Istanbul at full speed.
        When you connect to the internet, you can benefit from our beautiful travel advice and make your trip more enjoyable :)</string>
    <!-- notificaiton array -->
    <string-array name="morning_good">
        <item>@string/goodmorningnotification</item>
        <item>@string/sabahmotf</item>
        <item>@string/bosphorusnotification</item>
        <item>@string/oglennotf</item>
        <item>@string/bogazturunotf</item>
        <item>@string/modasahilinotf</item>
        <item>@string/picnicnotf</item>
    </string-array>

    <string-array name="noon_good">
        <item>@string/oglennotf</item>
        <item>@string/kumpirwafflenotf</item>
        <item>@string/konsernotf</item>
        <item>@string/oglennotf</item>
        <item>@string/bosphorusnotification</item>
        <item>@string/bogazturunotf</item>
        <item>@string/modasahilinotf</item>
        <item>@string/konsernotf</item>
        <item>@string/bogaznotf</item>
    </string-array>

    <string-array name="afternoon_good">
        <item>@string/aksamnotf</item>
        <item>@string/bescayınotf</item>
        <item>@string/konsernotf</item>
        <item>@string/bosphorusnotification</item>
        <item>@string/kumpirwafflenotf</item>
    </string-array>

    <string-array name="morning_bad">
        <item>@string/sabahmotf</item>
        <item>@string/s_havanotf</item>
        <item>@string/s_havanotf2</item>
        <item>@string/s_havanotf4</item>
        <item>@string/s_havanotf5</item>
        <item>@string/s_havanotf6</item>
    </string-array>
    <string-array name="morning_rain">
        <item>@string/sabahmotf</item>
        <item>@string/s_havanotf</item>
        <item>@string/s_havanotf1</item>
        <item>@string/s_havanotf2</item>
        <item>@string/s_havanotf3</item>
        <item>@string/s_havanotf4</item>
        <item>@string/s_havanotf5</item>
        <item>@string/s_havanotf6</item>
        <item>@string/s_havanotf7</item>
    </string-array>

    <string-array name="noon_rain">
        <item>@string/s_havanotf</item>
        <item>@string/s_havanotf1</item>
        <item>@string/s_havanotf2</item>
        <item>@string/s_havanotf3</item>
        <item>@string/s_havanotf4</item>
        <item>@string/s_havanotf5</item>
        <item>@string/s_havanotf6</item>
        <item>@string/s_havanotf7</item>
    </string-array>

    <string-array name="afternoon_rain">
        <item>@string/s_havanotf</item>
        <item>@string/s_havanotf1</item>
        <item>@string/s_havanotf2</item>
        <item>@string/s_havanotf3</item>
        <item>@string/s_havanotf4</item>
        <item>@string/s_havanotf5</item>
        <item>@string/s_havanotf6</item>
        <item>@string/s_havanotf7</item>
    </string-array>

    <string-array name="noon_bad">
        <item>@string/s_havanotf</item>
        <item>@string/s_havanotf2</item>
        <item>@string/s_havanotf4</item>
        <item>@string/s_havanotf5</item>
        <item>@string/s_havanotf6</item>
    </string-array>


    <string-array name="afternoon_bad">
        <item>@string/s_havanotf2</item>
    </string-array>
    <string-array name="night">
        <item>@string/gecenotf</item>


    </string-array>


</resources>