...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro.OnBoarding"
    android:background="@drawable/background">

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="?selectableItemBackground"
        android:fontFamily="@font/nunito_bold"
...
        app:layout_constraintVertical_bias="0.0" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="642dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125">

    </androidx.viewpager.widget.ViewPager>
...
